Complete site transformation to Nachel - Computer Equipment & Stationery Store
- Updated branding and content
- Implemented new product showcase
- Added location-specific information for Embu
- Enhanced SEO and meta tags
- Improved UI/UX with modern design
- Removed pricing display
- Added business hours

--- a/index.html
+++ b/index.html
@@ -2,9 +2,98 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" type="image/png" href="/src/assets/favicon.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Nachel | Premium Computer Equipment & Stationery Supplies in Embu, Kenya</title>
+    <!-- Primary Meta Tags -->
+    <meta name="title" content="Nachel | Premium Computer Equipment & Stationery Supplies in Embu, Kenya" />
+    <meta name="description" content="Your trusted source for high-quality computer equipment, office supplies, and stationery in Embu, Kenya. We offer premium products, exceptional service, and competitive prices for all your business and educational needs." />
+    <meta name="keywords" content="computer equipment, stationery supplies, office supplies, printer supplies, school supplies, technology store, Embu, Kenya, computer accessories, business supplies, educational materials" />
+    <meta name="robots" content="index, follow" />
+    <meta name="language" content="English" />
+    <meta name="author" content="Nachel" />
+    
+    <!-- Geo Tags -->
+    <meta name="geo.region" content="KE-EM" />
+    <meta name="geo.placename" content="Embu" />
+    <meta name="geo.position" content="-0.5396;37.4516" />
+    <meta name="ICBM" content="-0.5396, 37.4516" />
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://nachel.com/" />
+    <meta property="og:title" content="Nachel | Premium Computer Equipment & Stationery Supplies" />
+    <meta property="og:description" content="Your trusted source for high-quality computer equipment, office supplies, and stationery in Embu, Kenya. Premium products and exceptional service for all your business needs." />
+    <meta property="og:image" content="https://nachel.com/og-image.jpg" />
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://nachel.com/" />
+    <meta property="twitter:title" content="Nachel | Premium Computer Equipment & Stationery" />
+    <meta property="twitter:description" content="Your trusted source for high-quality computer equipment, office supplies, and stationery in Embu, Kenya. Premium products and exceptional service for all your business needs." />
+    <meta property="twitter:image" content="https://nachel.com/twitter-image.jpg" />
+
+    <!-- JSON-LD structured data for local business -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "ComputerStore",
+      "name": "Nachel",
+      "image": "https://nachel.com/store-image.jpg",
+      "description": "Premium computer equipment and stationery supplies store in Embu, Kenya",
+      "@id": "https://nachel.com",
+      "url": "https://nachel.com",
+      "telephone": "+254XXXXXXXXX",
+      "address": {
+        "@type": "PostalAddress",
+        "streetAddress": "Your Street Address",
+        "addressLocality": "Embu",
+        "addressRegion": "Embu County",
+        "addressCountry": "KE"
+      },
+      "geo": {
+        "@type": "GeoCoordinates",
+        "latitude": "-0.5396",
+        "longitude": "37.4516"
+      },
+      "openingHoursSpecification": [
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": ["Monday", "Tuesday", "Wednesday", "Thursday", "Friday"],
+          "opens": "09:00",
+          "closes": "18:00"
+        },
+        {
+          "@type": "OpeningHoursSpecification",
+          "dayOfWeek": "Saturday",
+          "opens": "10:00",
+          "closes": "16:00"
+        }
+      ],
+      "priceRange": "$$",
+      "hasOfferCatalog": {
+        "@type": "OfferCatalog",
+        "name": "Computer Equipment and Stationery",
+        "itemListElement": [
+          {
+            "@type": "OfferCatalog",
+            "name": "Computer Equipment",
+            "description": "High-quality computers, printers, and accessories"
+          },
+          {
+            "@type": "OfferCatalog",
+            "name": "Office Supplies",
+            "description": "Complete range of office and stationery supplies"
+          },
+          {
+            "@type": "OfferCatalog",
+            "name": "School Supplies",
+            "description": "Educational materials and school stationery"
+          }
+        ]
+      }
+    }
+    </script>
   </head>
   <body>
     <div id="root"></div>
