Update website with new content and features: - Add swipeable carousel with professional product images - Update business address and contact information - Improve UI/UX and animations - Fix spacing and layout issues

--- a/index.html
+++ b/index.html
@@ -43,13 +43,14 @@
       "description": "Premium computer equipment and stationery supplies store in Embu, Kenya",
       "@id": "https://nachel.com",
       "url": "https://nachel.com",
-      "telephone": "+254XXXXXXXXX",
+      "telephone": ["+254742412960", "+254716949918"],
       "address": {
         "@type": "PostalAddress",
-        "streetAddress": "Your Street Address",
+        "streetAddress": "G4S Building, Mama Ngina Street",
         "addressLocality": "Embu",
         "addressRegion": "Embu County",
-        "addressCountry": "KE"
+        "addressCountry": "KE",
+        "description": "Located near G4S Embu Branch"
       },
       "geo": {
         "@type": "GeoCoordinates",
